--- a/styles/style.css
+++ b/styles/style.css
@@ -1,1 +1,2 @@
 /* Só mexer nesse style se for de suma importancia, e sempre avisar o grupo com bastante antecedencia */
+/* Style destinado a TODAS as telas, conotendo reset.css e as variaveis que serão usadas nos outros CSS */
