--- a/styles/style-inicial.css
+++ b/styles/style-inicial.css
@@ -1,1 +1,76 @@
 /* Style destinado a SOMENTE a tela inicial */
+/*body{
+    background-color: black;
+}
+#início{
+    background-color: white;
+}*/
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+body {
+    font-family: Arial, sans-serif;
+    background-color: #000;
+    color: #fff;
+}
+
+header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: #333;
+    padding: 10px;
+}
+
+header .logo img {
+    height: 50px;
+}
+
+nav a {
+    color: limegreen;
+    text-decoration: none;
+    margin: 0 15px;
+    font-size: 25px;
+
+}
+
+main {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 80vh;
+}
+
+.texto-principal {
+    text-align: center;
+    background-color: #fff;
+    color: #000;
+    padding: 20px;
+    border: 2px solid limegreen;
+    border-radius: 10px;
+    width: 400px;
+    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+}
+
+.texto-principal h1 {
+    font-size: 24px;
+}
+
+.texto-principal span {
+    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    font-size: 28px;
+}
+
+.texto-principal img {
+    margin-top: 20px;
+    height: 100px;
+}
+
+strong {
+    font-size: 18px;
+    font-weight: bold;
+}
+
