--- a/styles/style-inicial.css
+++ b/styles/style-inicial.css
@@ -46,7 +46,7 @@ main {
     background-color: #fff;
     color: #000;
     padding: 20px;
-    border: 2px solid limegreen;
+    border: 2px solid 0DFF00;
     border-radius: 10px;
     width: 700px;
     height:300px ;
