--- a/styles/style-login.css
+++ b/styles/style-login.css
@@ -1,1 +1,38 @@
 /* Style destinado SOMENTE a tela de login */
+body{
+    background-color: black;
+
+}
+
+main {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 80vh;
+    flex-direction: column;
+}
+main div{
+    text-align: center;
+    background-color: #fff;
+    color: #000;
+    padding: 20px;
+    border: 2px solid #0DFF00;
+    border-radius: 10px;
+    width: 400px;
+    height:300px ;
+    font-size: 25px;
+    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+}
+
+ main h1{
+    color: white;
+    font-size: 50px;
+    font-weight: 900;
+    text-shadow: #0DFF00 6px 0 2px;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    -webkit-text-stroke-width: 2px;
+    -webkit-text-stroke-color: #000;
+    
+
+}
+    
