--- a/styles/style-header.css
+++ b/styles/style-header.css
@@ -48,6 +48,8 @@ a{
 
 }
 
+
+
 /* Bagulhos da aba de utilidades abaixo */
 
 .item-icon{
@@ -75,11 +77,15 @@ a{
     height: 100vh;
     width: 0px;
     overflow: hidden;
-    transition: width 0.6s;
+    transition: 0.6s;
     position: fixed;
 
 }
 
+main{
+    transition: 0.6s;
+
+}
 
 
 .main-diminuido{
