--- a/styles/style-inicial.css
+++ b/styles/style-inicial.css
@@ -46,12 +46,13 @@ main {
     background-color: #fff;
     color: #000;
     padding: 20px;
-    border: 2px solid 0DFF00;
+    border: 2px solid #0DFF00;
     border-radius: 10px;
     width: 700px;
     height:300px ;
     font-size: 25px;
     font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    box-shadow: #0DFF00 0px 0px 5px;
 }
 
 .texto-principal h1 {
