--- a/styles/style-inicial.css
+++ b/styles/style-inicial.css
@@ -49,7 +49,7 @@ main {
     border: 2px solid #0DFF00;
     border-radius: 10px;
     width: 700px;
-    height:300px ;
+    height:350px ;
     font-size: 25px;
     font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     box-shadow: #0DFF00 0px 0px 5px;
@@ -74,4 +74,7 @@ strong {
     font-size: 18px;
     font-weight: bold;
 }
-
+#logoacademia {
+    display: flex;
+    justify-content: start;
+}
