--- a/styles/style-cadastro.css
+++ b/styles/style-cadastro.css
@@ -15,7 +15,7 @@ main {
     border: 2px solid #0DFF00;
     border-radius: 10px;
     width: 500px;
-    height:500px ;
+    height: 500px ;
     font-size: 25px;
     font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
@@ -77,5 +77,35 @@ form{
 
 body{
     background-color: black;
+
+}
+ #button-submit-div{
+    display: flex; 
+    justify-content: center;
+ }
+
+ #submit-button{
+    width: 200px;
+    height: 30px;
+    box-shadow: #0DFF00 0px 1px 8px;
+    background-color: rgb(235, 255, 235)
+
+ }
+
+ #submit-button:hover{
+    background-color: rgba(211, 230, 211, 0.664);
+    cursor: pointer;
+
+}
+
+.label{
+    font-size: medium;
+    display: flex;
+    justify-content: start;
+    padding-left: 10px;
+}
+
+.asterisco{
+    color: red;
 
 }
