--- a/styles/style-cadastro.css
+++ b/styles/style-cadastro.css
@@ -4,7 +4,7 @@ main {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 80vh;
+    height: 90vh;
     flex-direction: column;
 }
 .formulario{
@@ -88,7 +88,8 @@ body{
     width: 200px;
     height: 30px;
     box-shadow: #0DFF00 0px 1px 8px;
-    background-color: rgb(235, 255, 235)
+    background-color: rgb(235, 255, 235);
+    border-radius: 100%;
 
  }
 
