--- a/styles/style-login.css
+++ b/styles/style-login.css
@@ -90,7 +90,8 @@ form{
     width: 200px;
     height: 30px;
     box-shadow: #0DFF00 0px 1px 8px;
-    background-color: rgb(235, 255, 235)
+    background-color: rgb(235, 255, 235);
+    border-radius: 100%;
 
  }
 
