--- a/styles/style-dados.css
+++ b/styles/style-dados.css
@@ -133,6 +133,19 @@ main{
 .p-cirinfo{
     margin: 5px;
 }
+#section-title{
+    position: absolute;
+
+    width: 100%;
+    height: 10%;
+    text-align: center;
+    display: flex;
+    align-items: center;
+    font-size: 50px;
+    justify-content: center;
+    color: white;
+}
+
 
 @media only screen and (max-width : 1050px){
     main{
