--- a/styles/style-eventos.css
+++ b/styles/style-eventos.css
@@ -118,7 +118,7 @@ main{
     font-weight: bold;
     box-shadow: var(--cor-principal) 2px 2px 4px;
     min-width: 280px;
-    min-height: 200px;
+    min-height: 230px;
 }
 .diario-conteudo h1{
     font-size: larger;
@@ -158,7 +158,7 @@ main{
     box-shadow: var(--cor-principal) 2px 2px 4px;
     text-shadow: #3333337c 2px 2px 2px;
     min-width: 240px;
-    min-height: 450px;
+    min-height: 500px;
 }
 .botao-add-evento{
     color: white;
@@ -182,10 +182,13 @@ main{
 
 
 .clock {
+    max-width: 220px;
+    max-height: 220px;
     min-height: 200px;
     min-width: 200px;
     width: 65%;
     height: 90%;
+    margin-top: 10px;
     border: 10px solid #fff;
     border-radius: 50%;
     position: relative;
@@ -255,6 +258,9 @@ main{
     .relo-dia{
         flex-direction: column;
         align-items: center;
+    }
+    .eventos-conteudo{
+        min-height: 450px;
     }
 
     .calendario{
