--- a/styles/style-principal.css
+++ b/styles/style-principal.css
@@ -1,1 +1,55 @@
 /* style destinado a SOMENTE a tela principal */
+
+body{
+    background-color: black;
+}
+main{
+    background-color: black;
+    display: flex;
+    justify-content: center;
+
+}
+
+
+.div-table{
+    color: white;
+    border: solid var(--cor-principal) 2px;
+    height: 80vh;
+    width: 70vw;
+    padding: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border-radius: 20px;
+    margin: 20px;
+    font-size: 25px;
+    min-width: 320px;
+}   
+
+.table{
+    height: 55vh;
+
+
+}
+.table tr td{
+    margin: 10px;
+    display: flex;
+    justify-content: end;
+}
+
+.table tr{
+    align-items: center;
+    border: solid var(--cor-principal) 2px;
+    display: flex;
+    justify-content: space-around;
+    height: 10.5vh;
+    
+    margin: 1px;
+    width: 64vw;
+    overflow: hidden;
+    transition: 0.6s;
+    min-width: 280px;
+
+
+}
+
