--- a/styles/style-header.css
+++ b/styles/style-header.css
@@ -4,6 +4,9 @@
     --var-cor-fundo-header: rgb(77, 77, 77);
     --cor-principal: rgb(0, 224, 0);
 }
+body::-webkit-scrollbar{
+    display: none;
+}
 header{
     background-color: var(--var-cor-fundo-header);
     width: 100vw;
@@ -21,7 +24,7 @@ header{
 }
 
 .header-icon{
-    width: 4vw;
+    width: 40px;
     border-radius: 50px;
     cursor: pointer;
 }
@@ -29,7 +32,7 @@ a{
    text-decoration: none; 
 }
 .caminho-lista-caminhos{
-    font-size: 2.5vw;
+    font-size: 30px;
     color: var(--cor-principal);
     
 }
@@ -39,16 +42,21 @@ a{
 }
 
 #notifica-inicio{
+    text-align: center;
     display: flex;
     justify-content: space-between;
-    width: 15vw;
+    height: 60px;
 }
 .image-link{
-    height: 4vw;
+    height: 60px;
+    align-items: center;
+    text-align: center;
+    display: flex;
 }
 
 #icon-logo{
-    width: 7vw;
+    width: 100%;
+    height: 100%;
     
 
 }
@@ -66,6 +74,7 @@ a{
 .item-text{
     color: white;
     font-weight: bold;
+    transition: 1s;
 }
 .utilit-item{
     display: flex;
@@ -76,14 +85,17 @@ a{
     align-items: center;
     
 
-}   
+} 
+
 .aba-utilidades{
     background-color: grey;
+
     height: 100vh;
     width: 0px;
     overflow: hidden;
     transition: 0.6s;
-    position: fixed;
+    position: absolute;
+    z-index: 3;
 
 }
 
@@ -92,15 +104,55 @@ main{
 
 }
 
+.escuro{
+    position: absolute;
+    width: 0px;
+    transition: 0.6s;
+    height: 100%;
+}
+.escuro-aparecendo{
 
-.main-diminuido{
-    left: 200px;
-    width: calc(100vw - 200px);
-    position: fixed;
+    width: 100vw;
+    background-color: rgba(0, 0, 0, 0.644);
+    z-index: 2;
 }
 
 .aumentada{
     width: 200px;
 }
+
+@media only screen and (max-width : 1050px){
+    .escuro{
+        height: 1493px;
+    }
+    .aba-utilidades{
+        height: 1493px;
+    }
+
+
+
+
+
+}
+
+@media only screen and (max-width : 850px){
+    .caminho-lista-caminhos{
+        font-size: 20px;
+    
+        
+    }
+}
+@media only screen and (max-width : 550px){
+    .caminho-lista-caminhos{
+        font-size: 15px;
+    
+        
+    }
+
+    #icon-logo{
+        display: none;
+    }
+}
+
 
 /* Cabo */
