--- a/styles/style-login.css
+++ b/styles/style-login.css
@@ -23,7 +23,9 @@ main {
     font-size: 25px;
     font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
-
+.link{
+    color: var(--cor-principal);
+}
  #my {
     color: white;
     font-size: 80px;
